--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,30 @@
   	<hibernate.version>5.2.12.Final</hibernate.version>
   	<jackson-annotation.version>2.8.0</jackson-annotation.version>
   	<validation-api.version>1.1.0.Final</validation-api.version>
+  	<java.version>1.8</java.version>
+  	<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
   </properties>
   <name>Assistant Common Share</name>
   <description>Common library of Assistant Project</description>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>${maven-compiler-plugin.version}</version>
+  			<configuration>
+  				<optimize>true</optimize>
+  				<source>${java.version}</source>
+  				<target>${java.version}</target>
+  				<annotationProcessorPaths>
+  					<path>
+  						<groupId>org.hibernate</groupId>
+                  <artifactId>hibernate-jpamodelgen</artifactId>
+                  <version>${hibernate.version}</version>
+  					</path>
+  				</annotationProcessorPaths>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
