--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
   	<validation-api.version>1.1.0.Final</validation-api.version>
   	<java.version>1.8</java.version>
   	<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+  	<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
   </properties>
   <name>Assistant Common Share</name>
   <description>Common library of Assistant Project</description>
@@ -57,6 +58,19 @@
   					</path>
   				</annotationProcessorPaths>
   			</configuration>
+  		</plugin>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-source-plugin</artifactId>
+  			<version>${maven-source-plugin.version}</version>
+  			<executions>
+  				<execution>
+  					<id>attach-sources</id>
+  					<goals>
+  						<goal>jar</goal>
+  					</goals>
+  				</execution>
+  			</executions>
   		</plugin>
   	</plugins>
   </build>
