--- a/pom.xml
+++ b/pom.xml
@@ -1,77 +1,85 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>logia.assistant.share</groupId>
-  <artifactId>common-share</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.springframework.data</groupId>
-  		<artifactId>spring-data-jpa</artifactId>
-  		<version>1.11.10.RELEASE</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.hibernate</groupId>
-  		<artifactId>hibernate-entitymanager</artifactId>
-  		<version>${hibernate.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.hibernate</groupId>
-  		<artifactId>hibernate-envers</artifactId>
-  		<version>${hibernate.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.fasterxml.jackson.core</groupId>
-  		<artifactId>jackson-annotations</artifactId>
-  		<version>${jackson-annotation.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>javax.validation</groupId>
-  		<artifactId>validation-api</artifactId>
-  		<version>${validation-api.version}</version>
-  	</dependency>
-  </dependencies>
-  <properties>
-  	<hibernate.version>5.2.12.Final</hibernate.version>
-  	<jackson-annotation.version>2.8.0</jackson-annotation.version>
-  	<validation-api.version>1.1.0.Final</validation-api.version>
-  	<java.version>1.8</java.version>
-  	<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-  	<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-  </properties>
-  <name>Assistant Common Share</name>
-  <description>Common library of Assistant Project</description>
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>${maven-compiler-plugin.version}</version>
-  			<configuration>
-  				<optimize>true</optimize>
-  				<source>${java.version}</source>
-  				<target>${java.version}</target>
-  				<annotationProcessorPaths>
-  					<path>
-  						<groupId>org.hibernate</groupId>
-                  <artifactId>hibernate-jpamodelgen</artifactId>
-                  <version>${hibernate.version}</version>
-  					</path>
-  				</annotationProcessorPaths>
-  			</configuration>
-  		</plugin>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-source-plugin</artifactId>
-  			<version>${maven-source-plugin.version}</version>
-  			<executions>
-  				<execution>
-  					<id>attach-sources</id>
-  					<goals>
-  						<goal>jar</goal>
-  					</goals>
-  				</execution>
-  			</executions>
-  		</plugin>
-  	</plugins>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>logia.assistant.share</groupId>
+    <artifactId>common-share</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.11.10.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-envers</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
+            <version>${spring-elasticsearch.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson-annotation.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation-api.version}</version>
+        </dependency>
+    </dependencies>
+    <properties>
+        <hibernate.version>5.2.12.Final</hibernate.version>
+        <jackson-annotation.version>2.8.0</jackson-annotation.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
+        <java.version>1.8</java.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <spring-elasticsearch.version>2.1.10.RELEASE</spring-elasticsearch.version>
+    </properties>
+    <name>Assistant Common Share</name>
+    <description>Common library of Assistant Project</description>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <optimize>false</optimize>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>${hibernate.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-source-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
